deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-fpecommarce
  namespace: pr
spec:
  selector:
    matchLabels:
      run: backend-fpecommarce
  replicas: 1
  template:
    metadata:
      labels:
        run: backend-fpecommarce
    spec:
      containers:
        - name: backend-fpecommarce
          image: registry.carakan.id/belajar/sudobash/ecommarce-backend:v1.4
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: registry-carakan

---
apiVersion: v1
kind: Service
metadata:
  name: backend-fpecommarce-service
  namespace: pr
spec:
  # type: NodePort
  selector:
    run: backend-fpecommarce
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-ecommarce
  namespace: pr
spec:
  tls:
    - hosts:
        - backend-fpecommarce.tranto.tk
      secretName: wildcard-ssl-trantotk
  rules:
    - host: backend-fpecommarce.tranto.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-fpecommarce-service
                port:
                  number: 3000
  ingressClassName: nginx
